Enhanced output message for site/client key creation in support workflow

--- a/webroot/adm/oncall/generate-api-key-secret.html
+++ b/webroot/adm/oncall/generate-api-key-secret.html
@@ -135,11 +135,22 @@
             const name = encodeURIComponent($("#siteName").val());
             const clientTypes = $("input[name='siteClientTypes[]']:checked").map((_, el) => encodeURIComponent($(el).val())).get().join(",");
             const description = encodeURIComponent($("#siteDescription").val());
-            const url = "/api/site/add?name=" + name + "&types=" + clientTypes + "&description=" + description;
+            const url = `/api/site/add?name=${name}&types=${clientTypes}&description=${description}`;
 
             doApiCallWithCallback("POST", url, (text) => {
-                $("#siteSearchOutput").text(JSON.stringify(JSON.parse(text), null, 2));
-                window.alert(`Created site for [${name}]`);
+                const site = JSON.parse(text);
+
+                const alertMessage = `Created site for [${site.name}] with site ID [${site.id}]`;
+
+                const outputMessage = `\
+${alertMessage}
+
+--------------------------------------------------
+
+${JSON.stringify(site, null, 2)}`;
+
+                $("#siteSearchOutput").text(outputMessage);
+                window.alert(alertMessage);
             }, (err) => standardErrorCallback(err, `#siteSearchErrorOutput`));
         });
 
@@ -150,11 +161,42 @@
             const name = encodeURIComponent($("#clientName").val());
             const roles = $("input[name='clientRoles[]']:checked").map((_, el) => encodeURIComponent($(el).val())).get().join(",");
             const siteId = encodeURIComponent($("#clientSiteId").val());
-            const url = "/api/client/add?name=" + name + "&roles=" + roles + "&site_id=" + siteId + "&service_id=0";
+            const url = `/api/client/add?name=${name}&roles=${roles}&site_id=${siteId}&service_id=0`;
 
             doApiCallWithCallback("POST", url, (text) => {
-                $("#clientSearchOutput").text(JSON.stringify(JSON.parse(text), null, 2));
-                window.alert(`Created API key for [${decodeURIComponent(name)}] under site ID [${siteId}]`);
+                const client = JSON.parse(text);
+
+                const alertMessage = `Created API key for [${client.authorizable.name}] under site ID [${client.authorizable.site_id}]`;
+
+                const tradeSecretsMessage = `\
+Key: ${client.plaintext_key}
+Secret: ${client.authorizable.secret}`;
+
+                const jiraBody = JSON.parse(JSON.stringify(client.authorizable));
+                delete jiraBody.key_hash;
+                delete jiraBody.key_salt;
+                delete jiraBody.secret;
+                delete jiraBody.key_id;
+
+                const outputMessage = `\
+${alertMessage}
+
+--------------------------------------------------
+
+Please copy the following into TradeSecrets:
+${tradeSecretsMessage}
+
+--------------------------------------------------
+
+Please copy the following into JIRA:
+${JSON.stringify(jiraBody, null, 2)}
+
+--------------------------------------------------
+
+${JSON.stringify(client, null, 2)}`;
+
+                $("#clientSearchOutput").text(outputMessage);
+                window.alert(alertMessage);
             }, (err) => standardErrorCallback(err, `#clientSearchErrorOutput`));
         });
 
