Enhanced client key creation in support workflow

--- a/webroot/adm/oncall/generate-api-key-secret.html
+++ b/webroot/adm/oncall/generate-api-key-secret.html
@@ -87,21 +87,16 @@
                 <br>
 
                 Roles:
-                <div>
-                    <input type="checkbox" id="clientRoles-GENERATOR" name="clientRoles[]" value="GENERATOR">
-                    <label for="clientRoles-GENERATOR">GENERATOR - for publishers</label>
-                </div>
-                <div>
-                    <input type="checkbox" id="clientRoles-MAPPER" name="clientRoles[]" value="MAPPER">
-                    <label for="clientRoles-MAPPER">MAPPER - for advertisers, data providers</label>
-                </div>
-                <div>
-                    <input type="checkbox" id="clientRoles-ID_READER" name="clientRoles[]" value="ID_READER">
-                    <label for="clientRoles-ID_READER">ID_READER - for DSPs</label>
-                </div>
+                <select id="clientRoles">
+                    <option value="" selected>Please select a role...</option>
+                    <option value="GENERATOR">GENERATOR - for publishers</option>
+                    <option value="MAPPER">MAPPER - for advertisers, data providers</option>
+                    <option value="ID_READER">ID_READER - for DSPs</option>
+                </select>
+
                 <div>
                     <input type="checkbox" id="clientRoles-SHARER" name="clientRoles[]" value="SHARER">
-                    <label for="clientRoles-SHARER">SHARER</label>
+                    <label for="clientRoles-SHARER">Does it additionally need the SHARER role? Be sure that the client definitely needs this. Most don't.</label>
                 </div>
 
                 <label for="clientSiteId">Site ID:</label>
@@ -155,11 +150,19 @@ ${JSON.stringify(site, null, 2)}`;
         });
 
         $("#createClient").on("click", () => {
+            const isSharerRoleChecked = $("#clientRoles-SHARER").is(":checked");
+            if (isSharerRoleChecked && !confirm("Are you sure you want to create a client key with the SHARER role? This is difficult to reverse.")) {
+                return;
+            }
+
             $(`#clientSearchOutput`).text("");
             $(`#clientSearchErrorOutput`).text("");
 
             const name = encodeURIComponent($("#clientName").val());
-            const roles = $("input[name='clientRoles[]']:checked").map((_, el) => encodeURIComponent($(el).val())).get().join(",");
+            let roles = encodeURIComponent($("#clientRoles").val());
+            if (isSharerRoleChecked) {
+                roles += ",SHARER";
+            }
             const siteId = encodeURIComponent($("#clientSiteId").val());
             const url = `/api/client/add?name=${name}&roles=${roles}&site_id=${siteId}&service_id=0`;
 
