--- a/webroot/adm/oncall/generate-cstg-keypair.html
+++ b/webroot/adm/oncall/generate-cstg-keypair.html
@@ -58,6 +58,11 @@
 
                     <br>
 
+                    <label for="createSite-workflow-siteDomainNames">Domain Names (comma-seperated list):</label>
+                    <input type="text" id="createSite-workflow-siteDomainNames" name="createSite-workflow-siteDomainNames">
+
+                    <br>
+
                     <label for="createSite-workflow-siteDescription">Description (Optional):</label>
                     <input type="text" id="createSite-workflow-siteDescription" name="createSite-workflow-siteDescription">
 
@@ -67,7 +72,7 @@
                     </div>
 
                     <br>
-    
+
                     <a href="#create" id="createSite-workflow-submit">Create</a>
                 </div>
             </td>
@@ -87,8 +92,13 @@
         });
 
         $("#createSite-workflow-submit").on("click", () => {
-            const isPublisherChecked = $("#createSite-workflow-siteClientTypes-PUBLISHER").is(":checked");
+            let domainNames = $("#createSite-workflow-siteDomainNames").val().replace(/\s+/g, '').split(',').filter( (value, _, __) => value !== "");
+            if (domainNames.length === 0) {
+                window.alert("Domain names cannot be empty");
+                return;
+            }
 
+            const isPublisherChecked = $("#createSite-workflow-siteClientTypes-PUBLISHER").is(":checked");
             if (!isPublisherChecked) {
                 window.alert("Unable to create site - only publishers are allowed to use CSTG.");
                 return;
@@ -100,22 +110,30 @@
 
             const name = encodeURIComponent($("#createSite-workflow-siteName").val());
             const description = encodeURIComponent($("#createSite-workflow-siteDescription").val());
-            const url = `/api/site/add?name=${name}&types=PUBLISHER&description=${description}`;
+            const createSiteUrl = `/api/site/add?name=${name}&types=PUBLISHER&description=${description}`;
 
-            doApiCallWithCallback("POST", url, (text) => {
+            doApiCallWithCallback("POST", createSiteUrl, (text) => {
                 const site = JSON.parse(text);
 
-                const alertMessage = `Created site for [${site.name}] with site ID [${site.id}]`;
+                const payload = {domain_names: domainNames};
 
-                const outputMessage = `\
+                const setDomainNamesUrl = `/api/site/domain_names?id=${site.id}`;
+
+                doApiCallWithCallback("POST", setDomainNamesUrl, (text) => {
+                    const site = JSON.parse(text);
+
+                    const alertMessage = `Created site for [${site.name}] with site ID [${site.id}]`;
+
+const outputMessage = `\
 ${alertMessage}
 
 --------------------------------------------------
 
 ${JSON.stringify(site, null, 2)}`;
 
-                $("#siteSearchOutput").text(outputMessage);
-                window.alert(alertMessage);
+                    $("#siteSearchOutput").text(outputMessage);
+                    window.alert(alertMessage);
+                }, (err) => standardErrorCallback(err, `#siteSearchOutput`), JSON.stringify(payload));
             }, (err) => standardErrorCallback(err, `#siteSearchOutput`));
         });
 
