Added update site for CSTG flow

--- a/webroot/adm/oncall/generate-api-key-secret.html
+++ b/webroot/adm/oncall/generate-api-key-secret.html
@@ -180,13 +180,10 @@
 <script language="JavaScript">
     $(document).ready(() => {
         $("#searchParticipant").on("click", () => {
-            const name = encodeURIComponent($("#participantName").val());
+            const name = $("#participantName").val();
 
-            $.when(
-                search("site", name),
-                search("client", name)
-            )
-            .then((r1, r2) => {});
+            search("site", name);
+            search("client", name);
         });
 
         $("#createSite").on("click", () => {
@@ -252,19 +249,25 @@ ${JSON.stringify(site, null, 2)}`;
         $("#updateSite-workflow-submit").on("click", () => {
             $("#siteSearchOutput").text("");
 
-            const siteId = encodeURIComponent($("#updateSite-workflow-siteId").val());
-            const siteName = $("#updateSite-workflow-afterSearch-siteName").text();
+            const id = encodeURIComponent($("#updateSite-workflow-siteId").val());
+            const name = $("#updateSite-workflow-afterSearch-siteName").text();
             const clientTypes = $("input[name='updateSite-workflow-afterSearch-siteClientTypes[]']:checked").map((_, el) => encodeURIComponent($(el).val())).get().join(",");
             const description = encodeURIComponent($("#updateSite-workflow-afterSearch-siteDescription").val());
 
-            const updateClientTypesUrl = `/api/site/set-types?id=${siteId}&types=${clientTypes}`;
-            const updateDescriptionUrl = `/api/site/update?id=${siteId}&description=${description}`;
+            const updateClientTypesUrl = `/api/site/set-types?id=${id}&types=${clientTypes}`;
+            const updateDescriptionUrl = `/api/site/update?id=${id}&description=${description}`;
 
-            $.when(
-                doApiCallWithCallback("POST", updateClientTypesUrl, () => {}, () => {}),
-                doApiCallWithCallback("POST", updateDescriptionUrl, () => {}, () => {})
-            )
-            .then(search("site", siteName))
+            doApiCallWithCallback(
+                "POST",
+                updateClientTypesUrl,
+                () => doApiCallWithCallback(
+                    "POST",
+                    updateDescriptionUrl,
+                    () => search("site", name),
+                    (err) => standardErrorCallback(err, "#siteSearchOutput")
+                ),
+                (err) => standardErrorCallback(err, "#siteSearchOutput")
+            );
         });
 
         $("#createClient").on("click", () => {
@@ -330,7 +333,7 @@ ${JSON.stringify(client, null, 2)}`;
             doApiCallWithCallback("GET", `/api/${type}/list`, (text) => {
                     const searchList = JSON.parse(text);
 
-                    const similarList = searchList.filter(s => s.name.toLowerCase().includes(name.toLowerCase()));
+                    const similarList = searchList.filter((s) => s.name.toLowerCase().includes(name.toLowerCase()));
                     if (similarList.length === 0) {
                         $(`#${type}SearchOutput`).text("No results");
                     } else {
