Added CSTG create keypair inputs

--- a/webroot/adm/oncall/generate-api-key-secret.html
+++ b/webroot/adm/oncall/generate-api-key-secret.html
@@ -33,12 +33,8 @@
             <th>Clients</th>
         </tr>
         <tr>
-            <td>
-                <pre id="siteSearchOutput"></pre>
-            </td>
-            <td>
-                <pre id="clientSearchOutput"></pre>
-            </td>
+            <td><pre id="siteSearchOutput"></pre></td>
+            <td><pre id="clientSearchOutput"></pre></td>
         </tr>
         <tr>
             <td id="create" colspan="2" style="text-align: center">
@@ -213,7 +209,7 @@ ${JSON.stringify(site, null, 2)}`;
 
                 $("#siteSearchOutput").text(outputMessage);
                 window.alert(alertMessage);
-            }, (err) => standardErrorCallback(err, `#siteSearchOutput`));
+            }, (err) => standardErrorCallback(err, "#siteSearchOutput"));
         });
 
         $("#updateSite").on("click", () => {
