Added CSTG keypair creation API call

--- a/webroot/adm/oncall/generate-api-key-secret.html
+++ b/webroot/adm/oncall/generate-api-key-secret.html
@@ -193,6 +193,7 @@
             const name = encodeURIComponent($("#createSite-workflow-name").val());
             const clientTypes = $("input[name='createSite-workflow-clientTypes[]']:checked").map((_, el) => encodeURIComponent($(el).val())).get().join(",");
             const description = encodeURIComponent($("#createSite-workflow-description").val());
+
             const url = `/api/site/add?name=${name}&types=${clientTypes}&description=${description}`;
 
             doApiCallWithCallback("POST", url, (text) => {
@@ -298,6 +299,7 @@ ${JSON.stringify(site, null, 2)}`;
                 roles += ",SHARER";
             }
             const siteId = encodeURIComponent($("#createClient-workflow-siteId").val());
+
             const url = `/api/client/add?name=${name}&roles=${roles}&site_id=${siteId}&service_id=0`;
 
             doApiCallWithCallback("POST", url, (text) => {
@@ -321,11 +323,13 @@ ${alertMessage}
 --------------------------------------------------
 
 Please copy the following into TradeSecrets:
+
 ${tradeSecretsMessage}
 
 --------------------------------------------------
 
-Please copy the following into JIRA:
+Please copy the following into the JIRA ticket:
+
 ${JSON.stringify(jiraBody, null, 2)}
 
 --------------------------------------------------
