Added CSTG keypair search in workflow

--- a/webroot/adm/oncall/generate-api-key-secret.html
+++ b/webroot/adm/oncall/generate-api-key-secret.html
@@ -227,7 +227,7 @@ ${JSON.stringify(site, null, 2)}`;
             doApiCallWithCallback("GET", "/api/site/list", (text) => {
                     const searchList = JSON.parse(text);
 
-                    const siteList = searchList.filter(s => s.id.toString() === siteId);
+                    const siteList = searchList.filter((site) => site.id.toString() === siteId);
                     if (siteList.length === 0) {
                         $("#updateSite-workflow-searchOutput").text("No results");
                     } else {
@@ -338,7 +338,7 @@ ${JSON.stringify(client, null, 2)}`;
 
                 $("#clientSearchOutput").text(outputMessage);
                 window.alert(alertMessage);
-            }, (err) => standardErrorCallback(err, `#clientSearchOutput`));
+            }, (err) => standardErrorCallback(err, "#clientSearchOutput"));
         });
 
         const search = (type, name) => {
@@ -347,7 +347,7 @@ ${JSON.stringify(client, null, 2)}`;
             doApiCallWithCallback("GET", `/api/${type}/list`, (text) => {
                     const searchList = JSON.parse(text);
 
-                    const similarList = searchList.filter((s) => s.name.toLowerCase().includes(name.toLowerCase()));
+                    const similarList = searchList.filter((obj) => obj.name.toLowerCase().includes(name.toLowerCase()));
                     if (similarList.length === 0) {
                         $(`#${type}SearchOutput`).text("No results");
                     } else {
