Added geo support

--- a/webroot/adm/oncall/generate-api-key-secret.html
+++ b/webroot/adm/oncall/generate-api-key-secret.html
@@ -9,6 +9,41 @@
             vertical-align: top;
         }
 
+        .geo {
+            display: none;
+        }
+
+        .geo .marquee {
+            height: 25px;
+            width: 420px;
+
+            overflow: hidden;
+            position: relative;
+        }
+        .geo .marquee div {
+            display: block;
+            width: 200%;
+            height: 30px;
+
+            position: absolute;
+            overflow: hidden;
+
+            animation: marquee 5s linear infinite;
+        }
+        .geo .marquee span {
+            float: left;
+            width: 50%;
+        }
+        @keyframes marquee {
+            0% { left: 0; }
+            100% { left: -100%; }
+        }
+
+        .geo .gif {
+            float: left;
+            height: 50px !important;
+        }
+
         .hidden {
             display: none;
         }
@@ -20,10 +55,31 @@
 <a href="/">Back</a>
 
 <br>
+
+<button id="lightmode" class="no-geo">
+    <img src="../../css/lightmode.png">
+</button>
+<button id="darkmode" class="geo">
+    <img src="../../css/darkmode.png">
+</button>
+
+<br>
+
+<img class="geo" src="../../css/construction.gif">
+
+<br>
 <br>
 
 <div class="ro-adm hidden">
-    <h3>Please input the participant's name.</h3>
+    <div class="geo">
+        <div class="marquee">
+            <div>
+                <span>Please input the participant's name.</span>
+                <span>Search to find similar sites or client keys.</span>
+            </div>
+        </div>
+    </div>
+    <h3 class="no-geo">Please input the participant's name.</h3>
     <label for="participantName">Name:</label>
     <input type="text" id="participantName" name="participantName">
     <a href="#" id="searchParticipant">Search</a>
@@ -42,6 +98,7 @@
         </tr>
         <tr>
             <td id="create" colspan="2" style="text-align: center">
+                <span class="geo"><img class="gif" src="../../css/clippy.gif"></span>
                 <h3>Didn't find what you were looking for?</h3>
             </td>
         </tr>
@@ -179,6 +236,29 @@
 
 <script language="JavaScript">
     $(document).ready(() => {
+        $("#lightmode").on("click", () => {
+            const stylesheet = document.createElement("link");
+            stylesheet.setAttribute("id", "stylesheet-geo");
+            stylesheet.setAttribute("rel", "stylesheet");
+            stylesheet.setAttribute("href", "../../css/bootstrap.min.css");
+            document.head.appendChild(stylesheet);
+
+            $("body").css("background", "url(../../css/background.gif)");
+
+            $(".geo").show();
+            $(".no-geo").hide();
+        });
+
+        $("#darkmode").on("click", () => {
+            const stylesheet = document.getElementById("stylesheet-geo");
+            stylesheet.parentNode.removeChild(stylesheet);
+
+            $("body").css("background", "");
+
+            $(".geo").hide();
+            $(".no-geo").show();
+        });
+
         $("#searchParticipant").on("click", () => {
             const name = $("#participantName").val();
 
