--- a/webroot/adm/oncall/generate-api-key-secret.html
+++ b/webroot/adm/oncall/generate-api-key-secret.html
@@ -371,7 +371,7 @@ ${JSON.stringify(site, null, 2)}`;
 
         $("#createClient-workflow-submit").on("click", () => {
             const isSharerRoleChecked = $("#createClient-workflow-roles-SHARER").is(":checked");
-            if (isSharerRoleChecked && !confirm("Are you sure you want to create a client key with the SHARER role? This is difficult to reverse.")) {
+            if (isSharerRoleChecked && !confirm("Are you sure you want to create a client key with the SHARER role?")) {
                 return;
             }
 
